Fix bug causing trackers to be retried continuously when hostname can not be resolved because the network isn't up yet.

BUG: 183697
BUG: 183699


svn path=/branches/stable/extragear-kde4/network/ktorrent/; revision=925142